--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -40,4 +40,21 @@
   .select-option {
     color: #898a8b;
   }
+
+  .experience-dorn {
+    background-color: $dark-blue-color;
+  }
+}
+
+.ant-carousel .slick-next,
+.ant-carousel .slick-prev {
+  width: 40px;
+  height: 40px;
+}
+
+.line-clamp-2 {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
